--- a/index.html
+++ b/index.html
@@ -15,11 +15,9 @@
             <input type="text" id="nama"><br>
             <label>Your BirthDate</label><br>
             <input type="date" id="yourbirth"><br>
-            <!-- <button id="buttonAge">Check Age</button> -->
-            <button class="btn btn-danger" id="buttonAge">Check Age</button><br>
+            <button class="btn" id="buttonAge">Check Age</button><br>
         </div>
         <div class="well">
-            <!-- <h1 class="p">nama kamu adalah :</h1><span id="hasil-nama"></span><br> -->
             <span>Your age : </span>
             <span id="yourAge"></span>
         </div>
