--- a/index.html
+++ b/index.html
@@ -9,16 +9,16 @@
 </head>
 <body>
     <div class="container">
-        <h1>Age Checker</h1>
-        <div class="form">
+        <h1>Hitung Umur</h1>
+        <div class="form"> 
             <label>Masukkan Nama</label><br>
             <input type="text" id="nama"><br>
-            <label>Your BirthDate</label><br>
+            <label>Your Tanggal Lahir</label><br>
             <input type="date" id="yourbirth"><br>
-            <button class="btn" id="buttonAge">Check Age</button><br>
+            <button class="btn" id="buttonAge">Lihat Usia</button><br>
         </div>
         <div class="well">
-            <span>Your age : </span>
+            <span>Umur Kamu : </span>
             <span id="yourAge"></span>
         </div>
     </div>  
